Archive2/e5/5847cfdbbcfe69/output
main.cpp:4:5: error: 'Bar' does not name a type
     Bar<T> b;
     ^
main.cpp: In function 'int main()':
main.cpp:15:15: warning: unused variable 'f' [-Wunused-variable]
     Foo<char> f;
               ^
